# zizmor

./: .git-blame-ignore-revs  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  code-injection-models.txt  massive-vulnerable-workflow.yml  mkdocs.yml  pyproject.toml  site-requirements.txt  test-config.yml  test-workflow.yml  test.yml
crates/github-actions-expressions/: Cargo.toml  README.md
crates/github-actions-expressions/src/: call.rs  context.rs  expr.pest  identifier.rs  lexer.rs  lib.rs  literal.rs  op.rs  parser.rs  visitor.rs
crates/github-actions-expressions/tests/: languageservices_kat.rs  upstream_kat.rs
crates/github-actions-expressions/tests/testdata/: .upstream-sha
crates/github-actions-models/: Cargo.toml  README.md
crates/github-actions-models/src/: action.rs  common.rs  lib.rs
crates/github-actions-models/src/common/: expr.rs
crates/github-actions-models/src/dependabot/: v2.rs
crates/github-actions-models/src/workflow/: event.rs  job.rs  mod.rs
crates/github-actions-models/tests/: test_action.rs  test_dependabot_v2.rs  test_workflow.rs
crates/github-actions-models/tests/sample-dependabot/: homebrew-core.yml
crates/github-actions-models/tests/sample-dependabot/v2/: cooldown.yml  cron-missing-cronjob.invalid.yml  cronjob-on-daily.invalid.yml  day-on-daily.invalid.yml  devcontainers.yml  grafana.yml  issue-1305.yml  opentofu.yml  private-cargo-registry.yml  weekly-with-day.yml
crates/github-actions-models/tests/sample-workflows/: fractional-timeout.yml  homebrew-core-dispatch-rebottle.yml  numeric-condition.yml  parallel-steps-background.yml  parallel-steps-cancel.yml  parallel-steps-parallel.yml  parallel-steps-wait-all.yml  rnpgp-rnp-centos-and-fedora.yml  workflow-run-scalar-types.yml  zizmor-issue-1769.yml  zizmor-issue-2218.yml
crates/pre-commit-models/: Cargo.toml  README.md
crates/pre-commit-models/src/: common.rs  config.rs  hooks.rs  lib.rs
crates/pre-commit-models/tests/: test_config.rs  test_hooks.rs
crates/pre-commit-models/tests/sample-configs/: gh-action-pypi-publish.yml
crates/pre-commit-models/tests/sample-hooks/: pre-commit-hooks.yml
crates/subfeature/: Cargo.toml  README.md
crates/subfeature/src/: lib.rs
crates/tree-sitter-iter/: Cargo.toml  README.md
crates/tree-sitter-iter/src/: lib.rs
crates/yamlpatch/: Cargo.toml  LICENSE  README.md
crates/yamlpatch/src/: lib.rs
crates/yamlpatch/tests/: unit_tests.rs
crates/yamlpath/: Cargo.toml  README.md
crates/yamlpath/src/: lib.rs
crates/yamlpath/tests/: integration_test.rs
crates/yamlpath/tests/testcases/: anchors-basic.yml  anchors-list.yml  anchors-nested.yml  exact-features.yml  flow.yml  interceding-comment.yml  key-only-features.yml
crates/zizmor/: Cargo.toml  build.rs
crates/zizmor-sarif/: Cargo.toml  README.md
crates/zizmor-sarif/src/: lib.rs
crates/zizmor/benches/: bench_e2e.rs
crates/zizmor/data/: action-permissions.json  archived-repos.txt  codeql-injection-sinks.json  context-capabilities.csv  github-runners.txt  popular-actions.txt
crates/zizmor/src/: cli.rs  config.rs  config_schema.rs  finding.rs  fix.rs  github.rs  github_api.rs  lsp.rs  main.rs  models.rs  oci_registry.rs  registry.rs  state.rs  utils.rs
crates/zizmor/src/audit/: adhoc_packages.rs  agentic_actions.rs  anonymous_definition.rs  archived_uses.rs  artipacked.rs  bot_conditions.rs  cache_poisoning.rs  concurrency_cancel.rs  concurrency_limits.rs  dangerous_triggers.rs  dependabot_cooldown.rs  dependabot_execution.rs  excessive_permissions.rs  forbidden_uses.rs  github_app.rs  github_env.rs  hardcoded_container_credentials.rs  hardcoded_credentials.rs  impostor_commit.rs  insecure_commands.rs  insecure_origin.rs  insecure_url_scheme.rs  known_vulnerable_actions.rs  misfeature.rs  missing_timeout.rs  mod.rs  obfuscation.rs  overprovisioned_secrets.rs  ref_confusion.rs  ref_version_mismatch.rs  secrets_inherit.rs  secrets_outside_env.rs  self_hosted_runner.rs  shellcheck.rs  stale_action_refs.rs  stale_runner.rs  superfluous_actions.rs  template_injection.rs  timeout_minutes.rs  typosquat_uses.rs  (+10 more)
crates/zizmor/src/audit/snapshots/: zizmor__audit__artipacked__tests__fix_creates_with_block_when_missing.snap  zizmor__audit__artipacked__tests__fix_merges_into_existing_with_block.snap  zizmor__audit__template_injection__tests__template_injection_fix_github_actor.snap  zizmor__audit__template_injection__tests__template_injection_fix_github_ref_name.snap  zizmor__audit__template_injection__tests__template_injection_fix_with_existing_env.snap  zizmor__audit__template_injection__tests__template_injection_multiple_expressions.snap  zizmor__audit__template_injection__tests__template_injection_safe_contexts.snap
crates/zizmor/src/config/: mod.rs  schema.rs
crates/zizmor/src/data/: dependabot-2.0.json  github-action.json  github-workflow.json  pre-commit-config.json  zizmor.schema.json
crates/zizmor/src/expr/: mod.rs
crates/zizmor/src/finding/: location.rs  mod.rs
crates/zizmor/src/github/: lineref.rs  pktline.rs
crates/zizmor/src/models/: action.rs  coordinate.rs  dependabot.rs  docker.rs  inputs.rs  pre_commit.rs  uses.rs  version.rs  workflow.rs
crates/zizmor/src/models/uses/: docker.rs  repository.rs
crates/zizmor/src/models/workflow/: matrix.rs
crates/zizmor/src/output/: fix.rs  github.rs  mod.rs  plain.rs  sarif.rs
crates/zizmor/src/output/json/: mod.rs  v1.rs
crates/zizmor/src/registry/: input.rs
crates/zizmor/src/yaml_patch/: .mod.rs.pending-snap  mod.rs
crates/zizmor/tests/integration/: acceptance.rs  cli.rs  common.rs  config.rs  e2e.rs  fix_format_json.rs  json.rs  main.rs  snapshot.rs
crates/zizmor/tests/integration/audit/: adhoc_packages.rs  agentic_actions.rs  anonymous_definition.rs  archived_uses.rs  artipacked.rs  bot_conditions.rs  cache_poisoning.rs  concurrency_limits.rs  dangerous_triggers.rs  dependabot_cooldown.rs  dependabot_execution.rs  excessive_permissions.rs  forbidden_uses.rs  github_app.rs  github_env.rs  impostor_commit.rs  insecure_commands.rs  (+29 more)
(+964 files in other folders)
