[workspace]
resolver = "2"
members = [
    "crates/github-actions-expressions",
    "crates/github-actions-models",
    "crates/subfeature",
    "crates/tree-sitter-iter",
    "crates/yamlpatch",
    "crates/yamlpath",
    "crates/zizmor",
]

[workspace.package]
authors = ["William Woodruff <william@yossarian.net>"]
readme = "README.md"
homepage = "https://docs.zizmor.sh"
edition = "2024"
license = "MIT"
rust-version = "1.88.0"

[workspace.dependencies]
github-actions-expressions = { path = "crates/github-actions-expressions", version = "0.0.12" }
github-actions-models = { path = "crates/github-actions-models", version = "0.43.0" }
subfeature = { path = "crates/subfeature", version = "0.0.4" }
tree-sitter-iter = { path = "crates/tree-sitter-iter", version = "0.0.3" }
yamlpath = { path = "crates/yamlpath", version = "0.33.0" }
yamlpatch = { path = "crates/yamlpatch", version = "0.11.0" }

anyhow = "1.0.100"
itertools = "0.14.0"
pest = "2.8.5"
pest_derive = "2.8.5"
pretty_assertions = "1.4.1"
annotate-snippets = "0.12.11"
anstream = "0.6.21"
assert_cmd = "2.1.2"
async-trait = "0.1.89"
camino = "1.2.2"
clap = "4.5.56"
clap-verbosity-flag = { version = "3.0.4", default-features = false }
clap_complete = "4.5.64"
clap_complete_nushell = "4.5.10"
csv = "1.3.1"
etcetera = "0.11.0"
flate2 = "1.1.8"
fst = "0.4.7"
futures = "0.3"
http = "1.4.0"
http-cache-reqwest = { version = "1.0.0-alpha.4", features = ["manager-moka"] }
human-panic = "2.0.5"
ignore = "0.4.25"
indexmap = { version = "2.13.0", features = ["serde"] }
indicatif = "0.18"
insta = "1.46.3"
jsonschema = "0.40.2"
line-index = "0.1.2"
memchr = "2.7.6"
owo-colors = "4.2.3"
regex = "1.12.1"
reqwest = "0.13"
reqwest-middleware = "0.5.0"
self_cell = "1"
schemars = "1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-sarif = "0.8.0"
serde_json = "1.0.149"
serde_json_path = "0.7.2"
serde_yaml = "0.9.34"
tar = "0.4.44"
terminal-link = "0.1.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "io-std"] }
tower-lsp-server = "0.23"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = "0.3.20"
tree-sitter = "0.26.5"
tree-sitter-bash = "0.25.1"
# Exact version since the upstream performed a breaking change outside of semver.
# See: https://github.com/zizmorcore/zizmor/pull/1427
tree-sitter-powershell = "=0.25.10"
tree-sitter-yaml = "0.7.2"
tikv-jemallocator = "0.6"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
use_debug = "warn"
needless_lifetimes = "warn"
print_stderr = "warn"
print_stdout = "warn"
unwrap_used = "warn"

[profile.dev.package]
insta.opt-level = 3

[profile.release]
lto = true
