[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

# NOTE: This section is a stub; needed to prevent
# `uv run --only-group docs` from failing.
[project]
name = "zizmor"
dynamic = ["version", "description", "readme", "urls", "authors", "license"]
# Arbitrarily set to the oldest non-EOL Python.
requires-python = ">=3.10"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/zizmor/Cargo.toml"
include = [{ path = "README.md", format = "sdist" }, { path = "LICENSE", format = "sdist" }]

[dependency-groups]
bench = [
    "pytest>=9.0.2",
    "pytest-codspeed>=4.2.0",
    "urllib3>=2.6.2",
]
docs = ["zensical"]
