[package]
name = "github-actions-expressions"
description = "GitHub Actions expression parser and data types"
repository = "https://github.com/zizmorcore/zizmor/tree/main/crates/github-actions-expressions"
version = "0.0.11"
readme = "README.md"

homepage.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
itertools.workspace = true
pest.workspace = true
pest_derive.workspace = true
serde_json.workspace = true
subfeature.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
