[package]
name = "github-actions-expressions"
description = "GitHub Actions expression parser and data types"
repository = "https://github.com/zizmorcore/zizmor/tree/main/crates/github-actions-expressions"
readme = "README.md"

version.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
itertools.workspace = true
pest.workspace = true
pest_derive.workspace = true
serde_json.workspace = true
subfeature.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde.workspace = true
