[package]
name = "github-actions-models"
description = "Unofficial, high-quality data models for GitHub Actions workflows, actions, and related components"
repository = "https://github.com/zizmorcore/zizmor/tree/main/crates/github-actions-models"
keywords = ["github", "ci"]
categories = ["api-bindings"]
readme = "README.md"

version.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
indexmap.workspace = true
self_cell.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
