[package]
name = "tree-sitter-iter"
description = "A very simple pre-order iterator for tree-sitter CSTs"
version = "1.24.0-rc1"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tree-sitter.workspace = true

[dev-dependencies]
tree-sitter-yaml = { workspace = true }

[lints]
workspace = true
