[package]
name = "tree-sitter-iter"
description = "A very simple pre-order iterator for tree-sitter CSTs"

version.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tree-sitter.workspace = true

[dev-dependencies]
tree-sitter-yaml = { workspace = true }

[lints]
workspace = true
