[package]
name = "yamlpatch"
description = "Comment and format-preserving YAML patch operations"
repository = "https://github.com/zizmorcore/zizmor/tree/main/crates/yamlpatch"
keywords = ["yaml", "patch"]
authors = [
    "Mostafa Moradian <mstfmoradian@gmail.com>",
    "William Woodruff <william@yossarian.net>",
]

version.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
indexmap.workspace = true
line-index.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
subfeature.workspace = true
thiserror.workspace = true
yamlpath.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
