[package]
name = "yamlpath"
version = "0.25.0"
description = "Format-preserving YAML feature extraction"
repository = "https://github.com/zizmorcore/zizmor/tree/main/crates/yamlpath"
readme = "README.md"
keywords = ["yaml"]

authors.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
line-index.workspace = true
serde.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-yaml = { workspace = true }

[dev-dependencies]
serde_yaml.workspace = true
