[package]
name = "yamlpath"
description = "Format-preserving YAML feature extraction"
repository = "https://github.com/zizmorcore/zizmor/tree/main/crates/yamlpath"
readme = "README.md"
keywords = ["yaml"]

version.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
line-index.workspace = true
self_cell.workspace = true
serde.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-iter = { workspace = true }
tree-sitter-yaml = { workspace = true }

[dev-dependencies]
serde_yaml.workspace = true
