[package]
name = "zizmor"
description = "Static analysis for GitHub Actions"
version = "1.9.0"
repository = "https://github.com/zizmorcore/zizmor"
documentation = "https://docs.zizmor.sh"
keywords = ["cli", "github-actions", "static-analysis", "security"]
categories = ["command-line-utilities"]
rust-version = "1.85.0"

homepage.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
edition.workspace = true

[features]
# Test-only: enable online audits that make use of a GitHub token via GH_TOKEN.
gh-token-tests = []
# Test-only: enable all online audits.
online-tests = ["gh-token-tests"]
# Test-only: enable tests that require `unbuffer` for TTY behavior.
tty-tests = []

[dependencies]
annotate-snippets.workspace = true
anstream.workspace = true
anyhow.workspace = true
camino = { workspace = true, features = ["serde1"] }
clap = { workspace = true, features = ["derive", "env"] }
clap-verbosity-flag = { workspace = true, features = ["tracing"] }
clap_complete.workspace = true
clap_complete_nushell.workspace = true
etcetera.workspace = true
flate2.workspace = true
fst.workspace = true
github-actions-expressions.workspace = true
github-actions-models.workspace = true
http-cache-reqwest.workspace = true
human-panic.workspace = true
ignore.workspace = true
indexmap.workspace = true
indicatif.workspace = true
itertools.workspace = true
jsonschema.workspace = true
line-index.workspace = true
owo-colors.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
reqwest-middleware.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-sarif.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tar.workspace = true
terminal-link.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-indicatif.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-powershell.workspace = true
yamlpath.workspace = true

[build-dependencies]
csv.workspace = true
fst.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
serde_json_path.workspace = true
